[project]
name = "misskey2telegram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyrogram @ git+https://github.com/TeamPGM/pyrogram",
    "PyrotgCrypto",
    "httpx",
    "apscheduler",
    "sqlalchemy",
    "sqlmodel",
    "aiosqlite",
    "PyYAML",
    "aiofiles",
    "pillow",
    "cashews[redis]",
    "alembic",
    "sentry-sdk",
    "mipa",
    "mipac",
]

[dependency-groups]
dev = [
    "ruff>=0.12.4",
]

[tool.uv.sources]
mipa = { git = "https://github.com/yupix/MiPA.git" }
mipac = { git = "https://github.com/yupix/MiPAC.git", rev = "26512b137e08fe193e8a8d77150d321d0c287dc4" }
